# ffmpeg_ext

./: .gitattributes  .gitignore  .mcp.json  Cargo.toml  README.md  TODO.org  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: build.template.yml  build.yml  commons_release.yml  release.yml
src/: chrono.rs  commands.rs  datetime.rs  duration.rs  engine.rs  hello.rs  lib.rs  main.rs  media.rs  mediafile.rs
src/cli/: duration.rs  merge_segments.rs  mod.rs  scene_detect.rs  split_by_time.rs
