[package]
name = "ffmpeg_ext"
version = "0.1.0"
authors = ["au9ustine <austin.shao@outlook.com>"]
edition = "2024"

[dependencies]
# cli
clap = { version = "4", features = ["derive"]}
# logging
tracing = "0.1"
tracing-subscriber = "0.3"
# async and stream
tokio ={ version = "1.47.1", features = ["full"]}
anyhow = "1.0.99"
async-stream = "0.3.6"
futures-core = "0.3.31"
tokio-stream = "0.1.17"

[features]
default = []
gui = []
